Fixed collapsed issue #6082

--- a/src/main/webapp/styles/style.css
+++ b/src/main/webapp/styles/style.css
@@ -16,6 +16,11 @@
 .F_template{
 	display: none !important;
 }
+
+.ng-table-group-toggle {
+  display: none !important;
+}
+
 .Q_linkedajsm{
 	border: 2px solid #80ADDA !important;
 	background: #92DAEA !important;
